@@ -42,6 +42,7 @@ Bug fixes for the 1.4 release.
 
 * Fix collision detection of custom entities that do not move.
 * Fix collisions triggered for removed entities (#710).
+* Fix pickables with special movement falling in holes too early.
 
 __________________________
 
